--- a/client/bundle.css
+++ b/client/bundle.css
@@ -3164,6 +3164,7 @@ div.sm-selector-container .domain-selector {
 .date-card-wrapper {
   padding: 2rem 0;
   margin-right: -0.5rem;
+  cursor: pointer;
 }
 
 @media only screen and (min-width: 400px) {
