Fix cascading accumulation problem on habit trees

--- a/client/src/assets/styles/pages/d3vis.scss
+++ b/client/src/assets/styles/pages/d3vis.scss
@@ -18,7 +18,8 @@ g.nodes {
 }
 
 .legend-svg .cell:nth-child(3) circle {
-  stroke: #edd837;
+  fill: #edd837;
+  stroke: #93cc96;
   stroke-width: 8px;
 }
 
