--- a/client/bundle.css
+++ b/client/bundle.css
@@ -3534,6 +3534,9 @@ main#append-habit .button-container.selected {
   bottom: 0.25rem;
   z-index: 10;
 }
+#reset-tree {
+   z-index: 10;
+}
 @media (min-width: 1024px) {
   #collapse-tree {
     top: 6rem;
