Fix broken useEffect dep array

--- a/client/bundle.css
+++ b/client/bundle.css
@@ -3202,7 +3202,7 @@ div.sm-selector-container .domain-selector {
     border: 0;
   }
   .date-card-wrapper {
-    padding: 0rem;
+    padding: 2rem 0rem;
   }
 
   .calendar-widget {
