--- a/client/bundle.css
+++ b/client/bundle.css
@@ -696,7 +696,7 @@ html {
   width: 14rem;
 }
 .w-1\/3 {
-  width: 30%;
+  width: 37%;
 }
 .w-2\/3 {
   width: 66.666667%;
@@ -2315,9 +2315,6 @@ html {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media (min-width: 640px) {
-  .sm\:w-48 {
-    width: 12rem;
-  }
   .sm\:inset-12 {
     top: 3rem;
     right: 3rem;
@@ -2394,6 +2391,9 @@ html {
   }
 }
 @media (min-width: 768px) {
+  .md\:w-48 {
+    width: 12rem;
+  }
   .md\:top-12 {
     top: 3rem;
   }
@@ -3180,6 +3180,9 @@ div.sm-selector-container .domain-selector {
   }
   .date-card-wrapper {
     padding: 2rem 0.25rem;
+  }
+  i.cal-date-nav {
+    top: 8rem;
   }
   #hamburger-wrapper input:checked + nav {
     transform: translate(-120%);
