--- a/client/bundle.css
+++ b/client/bundle.css
@@ -368,7 +368,7 @@ html {
   left: 1rem;
 }
 .-left-12 {
-  left: -3rem;
+  left: 0;
 }
 .isolate {
   isolation: isolate;
@@ -1748,6 +1748,9 @@ html {
 }
 .pb-4 {
   padding-bottom: 1rem;
+}
+.pb-8 {
+  padding-bottom: 2rem;
 }
 .pb-12 {
   padding-bottom: 3rem;
