Minor css fixes

--- a/client/src/assets/styles/components/vis.scss
+++ b/client/src/assets/styles/components/vis.scss
@@ -3,8 +3,9 @@ g.nodes {
   pointer-events: all;
 }
 
-.the-node circle {
-  // transition: fill 0.2s ease-out;
+.the-node.active circle {
+  stroke: #3d3229;
+  stroke-width: 4px;
 }
 
 .legend-svg .cell:first-child circle::after {
