--- a/client/bundle.css
+++ b/client/bundle.css
@@ -19,6 +19,7 @@ html {
 }
 body {
   margin: 0;
+  overflow: hidden;
 }
 body {
   font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell,
