--- a/client/bundle.css
+++ b/client/bundle.css
@@ -2485,10 +2485,14 @@ html {
     line-height: 1.5rem;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .lg\:static {
     position: static;
   }
+  .lg\:p-12 {
+    padding: 3rem;
+  }
+
   .lg\:fixed {
     position: fixed;
   }
@@ -2703,9 +2707,9 @@ html {
     max-width: 768px;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .container {
-    max-width: 1024px;
+    max-width: 1025px;
   }
 }
 @media (min-width: 1280px) {
@@ -2834,7 +2838,7 @@ section > h2:first-of-type,
   font-size: 1rem;
   line-height: 1.5rem;
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .nav-label-primary div span i {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -2873,7 +2877,7 @@ section > h2:first-of-type,
     height: 3rem;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .user-nav-label {
     font-size: 1rem;
     line-height: 1.5rem;
@@ -2937,11 +2941,12 @@ li#demo-indicator {
 #current-habit-label-sm > span:first-of-type,
 #subnav .nav-links > li.hoverable a,
 #current-habit-sm span {
+  padding-left: 2%;
   padding-top: 0.5rem;
   text-transform: uppercase;
   line-height: 2.5rem;
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   #current-habit-label-sm > span:first-of-type,
   #subnav .nav-links > li.hoverable a,
   #current-habit-sm span {
@@ -2971,7 +2976,7 @@ li#demo-indicator {
   text-transform: uppercase;
   line-height: 2.5rem;
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .nav-container span:first-child {
     padding-right: 1rem;
     padding-left: 1.5rem;
@@ -3221,6 +3226,12 @@ div.sm-selector-container .nav-label.domain-selector {
   cursor: pointer;
 }
 
+@media only screen and (max-width: 1024px) {
+  nav#subnav {
+    display: none;
+  }
+}
+
 @media only screen and (min-width: 400px) {
   .calendar-widget .date-card-wrapper {
     max-width: 100%;
@@ -3243,7 +3254,7 @@ div.sm-selector-container .nav-label.domain-selector {
     transform: translate(-127%);
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   div.sm-selector-container {
     display: none;
     height: 2rem;
@@ -3574,7 +3585,7 @@ main#append-habit .button-container.selected {
 .vis-button#reset-tree:before {
   content: "\f424";
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   #reset-tree {
     top: 9rem;
     bottom: auto;
@@ -3593,7 +3604,7 @@ main#append-habit .button-container.selected {
 #reset-tree {
   z-index: 10;
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   #collapse-tree {
     top: 6rem;
     bottom: auto;
@@ -3643,7 +3654,7 @@ input[type="date"]:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgba(255, 172, 60, var(--tw-ring-opacity));
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   input[type="text"],
   input[type="email"],
   .sm-selector-container select.domain-selector,
@@ -3704,7 +3715,7 @@ input[type="date"] {
     width: 17%;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .mask-wrapper input[type="date"] {
     line-height: 1rem;
     transform: translateY(9px);
@@ -3712,7 +3723,7 @@ input[type="date"] {
     font-size: 1rem;
   }
 }
-@media (max-width: 1024px) {
+@media (max-width: 1025px) {
   select.domain-selector::-ms-expand {
     display: none;
   }
@@ -3791,7 +3802,7 @@ input[type="date"] {
     margin-left: -0.5rem;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   #append-habit > .sub-section-container {
     margin-left: -0.75rem;
     width: 50%;
@@ -3807,7 +3818,7 @@ input[type="date"] {
     margin-right: 0.5rem;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   #append-habit > .sub-section-container:last-of-type {
     position: fixed;
   }
@@ -3819,7 +3830,7 @@ input[type="date"] {
 #append-habit input[type="date"] {
   padding: 0.5rem;
 }
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 1025px) {
   #append-habit > .sub-section-container:last-of-type {
     width: 48%;
   }
@@ -3840,7 +3851,7 @@ input[type="date"] {
   padding-bottom: 0.5rem;
   padding-left: 1rem;
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .mask-wrapper .user-avatar {
     flex-direction: row-reverse;
     border-radius: 0 0 1.5rem 1.5rem;
@@ -3857,7 +3868,7 @@ input[type="date"] {
 }
 .mask-wrapper #responsive-nav {
   display: flex;
-  height: 5rem;
+  max-height: 5rem;
   align-items: center;
   justify-content: space-between;
   padding-left: 0.25rem;
@@ -3870,7 +3881,7 @@ input[type="date"] {
     padding-right: 0.75rem;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .mask-wrapper #responsive-nav {
     justify-content: flex-end;
     padding-left: 0;
@@ -3903,7 +3914,7 @@ input[type="date"] {
     height: 2rem;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .mask-wrapper #hamburger-wrapper {
     flex: 1 1 auto;
   }
@@ -3951,7 +3962,7 @@ input[type="date"] {
     flex-wrap: wrap;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .mask-wrapper .wide-nav {
     position: static;
     display: flex;
@@ -3992,7 +4003,7 @@ input[type="date"] {
     padding-left: 0.25rem;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .mask-wrapper .wide-nav .label-wrapper {
     display: flex;
     width: auto;
@@ -4023,7 +4034,7 @@ input[type="date"] {
     flex-direction: column;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .nav-label-primary {
     margin-top: -0.75rem;
     margin-right: 0.5rem;
@@ -4035,7 +4046,7 @@ input[type="date"] {
 .nav-label-primary.domain-selector {
   border-radius: 9999px;
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .nav-label-primary.domain-selector {
     border-radius: 1.5rem;
     width: 30%;
