--- a/client/src/components/Header/styles.scss
+++ b/client/src/components/Header/styles.scss
@@ -149,7 +149,7 @@ li.hoverable {
           }
 
           .menu-card-button {
-            @apply absolute -bottom-2 border-2 mt-12 p-0 m-2 mb-16 rounded-full shadow-md text-gray-50 bg-gray-700 uppercase;
+            @apply absolute -bottom-2 border-2 mt-12 p-0 m-2 mb-12 rounded-full shadow-md text-gray-50 bg-gray-700 uppercase;
           }
 
           .menu-card-button:focus,
@@ -166,7 +166,7 @@ li.hoverable {
           }
 
           p {
-            @apply px-4 mt-1;
+            @apply px-2 leading-tight mt-1;
           }
         }
 
@@ -181,6 +181,10 @@ li.hoverable {
             @apply border-0;
           }
         }
+      }
+
+      .menu-card:last-child img {
+        @apply -mb-4;
       }
     }
   }
