--- a/client/src/styles/bundle.css
+++ b/client/src/styles/bundle.css
@@ -341,6 +341,12 @@ html {
 .right-4 {
   right: 1rem;
 }
+.right-48 {
+  right: 12rem;
+}
+.right-14 {
+  right: 3.5rem;
+}
 .-right-36 {
   right: -9rem;
 }
@@ -349,6 +355,9 @@ html {
 }
 .bottom-1 {
   bottom: 0.25rem;
+}
+.bottom-2 {
+  bottom: 0.5rem;
 }
 .bottom-6 {
   bottom: 1.5rem;
@@ -362,11 +371,17 @@ html {
 .-bottom-16 {
   bottom: -4rem;
 }
+.bottom-20 {
+  bottom: 5rem;
+}
 .left-0 {
   left: 0px;
 }
 .left-4 {
   left: 1rem;
+}
+.left-1\/3 {
+  left: 33%;
 }
 .-left-12 {
   left: 0;
@@ -512,6 +527,9 @@ html {
 }
 .mr-2 {
   margin-right: 0.5rem;
+}
+.mr-16 {
+  margin-right: 4rem;
 }
 .mr-3 {
   margin-right: 0.75rem;
@@ -701,6 +719,9 @@ html {
 }
 .w-2\/3 {
   width: 66.666667%;
+}
+.w-2 {
+  width: 0.5rem;
 }
 .w-1\/2 {
   width: 50%;
@@ -1286,6 +1307,10 @@ html {
 .rounded-r {
   border-top-right-radius: 0.25rem;
   border-bottom-right-radius: 0.25rem;
+}
+.rounded-r-full {
+  border-top-right-radius: 9999px;
+  border-bottom-right-radius: 9999px;
 }
 .rounded-b {
   border-bottom-right-radius: 0.25rem;
@@ -2010,10 +2035,15 @@ html {
 .text-balance-buttonbg-closelighter {
   color: #e06a58;
 }
-.text-balance-buttontext-digblue,
+
 .text-balance-buttontext-neutral {
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+
+.text-balance-buttontext-digblue {
+  --tw-text-opacity: 1;
+  color: #5568d2;
 }
 .hover\:text-gray-100:hover {
   --tw-text-opacity: 1;
@@ -2319,6 +2349,10 @@ html {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media (min-width: 640px) {
+  .left-1\/3 {
+    left: 42%;
+  }
+
   .sm\:inset-12 {
     top: 3rem;
     right: 3rem;
@@ -2501,6 +2535,9 @@ html {
   }
   .lg\:top-24 {
     top: 6rem;
+  }
+  .lg\:right-2 {
+    right: 0.5rem;
   }
   .lg\:right-6 {
     right: 1.5rem;
