change swipe zone positioning

--- a/client/src/components/HOC/withVis/vis.scss
+++ b/client/src/components/HOC/withVis/vis.scss
@@ -29,13 +29,13 @@ g.nodes {
   stroke-width: 2px;
 }
 
-.legend-svg .cell,
-.controls-svg {
+.legend-svg .cell {
   position: relative;
   pointer-events: none;
 }
 
 .controls-svg {
+  pointer-events: none;
   width: 72vw;
   height: 15vh;
   background-color: #dddddd;
