--- a/client/src/styles/bundle.css
+++ b/client/src/styles/bundle.css
@@ -291,6 +291,10 @@ html {
   left: 0px;
   right: 0px;
 }
+.inset-x-2 {
+  left: 0.5rem;
+  right: 0.5rem;
+}
 .inset-x-10 {
   left: 2.5rem;
   right: 2.5rem;
@@ -543,6 +547,9 @@ html {
 }
 .-mr-4 {
   margin-right: -1rem;
+}
+.-mb-12 {
+  margin-bottom: -4rem;
 }
 .mb-1 {
   margin-bottom: 0.25rem;
@@ -2482,6 +2489,10 @@ html {
   .md\:items-center {
     align-items: center;
   }
+  .md\:inset-2 {
+    right: 0.5rem;
+    left: 0.5rem;
+  }
   .md\:gap-1 {
     grid-gap: 0.25rem;
     gap: 0.25rem;
@@ -3313,8 +3324,8 @@ div.sm-selector-container .nav-label.domain-selector {
   }
 
   #modal {
-    right: 20%;
-    left: 20%;
+    right: 5%;
+    left: 5%;
   }
 
   #modal h3 {
